--- a/styles/icons.css
+++ b/styles/icons.css
@@ -16,20 +16,26 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  position: relative;
   width: 1.25rem;
   height: 1.25rem;
   color: inherit;
   transition: transform 0.2s ease, opacity 0.2s ease, color 0.2s ease;
 }
 
-.icon svg {
+.icon::before {
+  content: "";
   width: 100%;
   height: 100%;
-  stroke: currentColor;
-  stroke-width: 1.75;
-  stroke-linecap: round;
-  stroke-linejoin: round;
-  fill: none;
+  background-color: currentColor;
+  mask-image: var(--icon-src);
+  mask-repeat: no-repeat;
+  mask-position: center;
+  mask-size: contain;
+  -webkit-mask-image: var(--icon-src);
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  -webkit-mask-size: contain;
 }
 
 .icon[data-size="sm"] {
