--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -359,6 +359,19 @@ section {
   color: var(--color-accent);
 }
 
+.icon-badge[data-animated] {
+  padding: 4px;
+  background: var(--color-surface);
+  border: 1px solid var(--color-border);
+}
+
+.icon-badge[data-animated] img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  border-radius: 10px;
+}
+
 .icon-badge.small {
   width: 40px;
   height: 40px;
